# jutella

./: CHANGELOG.md  Cargo.toml  README.md
config/: jutella.toml  unspoken.toml
src/: app_config.rs  context.rs  lib.rs  main.rs
src/chat_client/: client.rs  context.rs  error.rs  mod.rs  rest.rs  stream.rs
src/chat_client/openai_api/: chat_completions.rs  client.rs  message.rs  mod.rs
