[package]
name = "jutella"
description = "Chatbot API client library and CLI interface."
license = "MIT"
repository = "https://github.com/dmitry-markin/jutella"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", optional = true }
clap = { version = "4.5.17", features = ["derive", "wrap_help"], optional = true }
colored = { version = "2.1.0", optional = true }
dirs = { version = "5.0.1", optional = true }
reqwest = { version = "0.12.7", default-features = false, features = ["gzip", "json", "hickory-dns", "http2", "rustls-tls", "zstd" ] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tiktoken-rs = "0.5.9"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
toml = { version = "0.8.19", optional = true }

[features]
default = ["bin"]
bin = ["dep:anyhow", "dep:clap", "dep:colored", "dep:dirs", "dep:toml"]
