[package]
name = "jutella"
description = "Chatbot API client library and CLI interface."
license = "MIT"
repository = "https://github.com/dmitry-markin/jutella"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.99", optional = true }
clap = { version = "4.5.47", features = ["derive", "wrap_help"], optional = true }
colored = { version = "3.0.0", optional = true }
dirs = { version = "6.0.0", optional = true }
iter_accumulate = "1.0.1"
reqwest = { version = "0.12.23", default-features = false, features = ["gzip", "json", "hickory-dns", "http2", "rustls-tls", "zstd" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tiktoken-rs = "0.7.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = { version = "0.9.5", optional = true }

[features]
default = ["bin"]
bin = ["dep:anyhow", "dep:clap", "dep:colored", "dep:dirs", "dep:toml"]
