[package]
name = "jutella"
description = "Chatbot API client library and CLI interface."
license = "MIT"
repository = "https://github.com/dmitry-markin/jutella"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.100", optional = true }
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive", "wrap_help"], optional = true }
colored = { version = "3.0.0", optional = true }
dirs = { version = "6.0.0", optional = true }
eventsource-stream = "0.2.3"
futures = "0.3.31"
iter_accumulate = "1.0.1"
reqwest = { version = "0.12.24", default-features = false, features = ["gzip", "json", "hickory-dns", "http2", "rustls-tls", "stream", "zstd" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tiktoken-rs = "0.7.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = { version = "0.9.8", optional = true }
url = "2.5.7"

[features]
default = ["bin"]
bin = ["dep:anyhow", "dep:clap", "dep:colored", "dep:dirs", "dep:toml"]
